--- a/package.json
+++ b/package.json
@@ -19,9 +19,18 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "gh-pages": "^6.2.0",
     "mantine-react-table": "^1.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "vite": "^5.4.9"
-  }
+  },
+  "URL":{
+    "homepage": "https://nouralizadeh.github.io//sample-2",
+    
+  },
+  "scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+}
 }
