correct pakage.json

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vite": "^5.4.9"
   },
   "URL":{
-    "homepage": "https://nouralizadeh.github.io//sample-2",
+    "homepage": "https://nouralizadeh.github.io//sample-2"
     
   }
 }
