--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
     "react-dom": "^18.3.1",
     "vite": "^5.4.9"
   },
-  "URL":{
+  "URL": {
     "homepage": "https://nouralizadeh.github.io//sample-2"
-    
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "postcss-preset-mantine": "^1.17.0",
+    "typescript": "^5.6.3"
   }
 }
